// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar.vue matches snapshot: {"props":{"color":"white"}} 1`] = `
<div class="navbar is-white">
    <div class="navbar-brand">
        <p>content</p><button class="button navbar-burger"><span></span><span></span><span></span></button><button class="button navbar-burger"><span></span><span></span><span></span></button></div>
</div>
`;

exports[`Navbar.vue matches snapshot: {"props":{"noBurger":true}} 1`] = `
<div class="navbar">
    <div class="navbar-brand">
        <p>content</p>
    </div>
</div>
`;

exports[`Navbar.vue matches snapshot: {"props":{"tag":"nav"}} 1`] = `
<nav class="navbar">
    <div class="navbar-brand">
        <p>content</p><button class="button navbar-burger"><span></span><span></span><span></span></button><button class="button navbar-burger"><span></span><span></span><span></span></button></div>
</nav>
`;

exports[`Navbar.vue matches snapshot: {"props":{"transparent":true}} 1`] = `
<div class="navbar is-transparent">
    <div class="navbar-brand">
        <p>content</p><button class="button navbar-burger"><span></span><span></span><span></span></button><button class="button navbar-burger"><span></span><span></span><span></span></button></div>
</div>
`;

exports[`Navbar.vue matches snapshot: {"slots":{"end":"<p>content</p>"}} 1`] = `
<div class="navbar">
    <div class="navbar-brand">
        <p>content</p><button class="button navbar-burger"><span></span><span></span><span></span></button><button class="button navbar-burger"><span></span><span></span><span></span></button></div>
    <div class="navbar-menu">
        <div class="navbar-end">
            <p>content</p>
        </div>
    </div>
</div>
`;

exports[`Navbar.vue matches snapshot: {"slots":{"menu":"<p>content</p>"}} 1`] = `
<div class="navbar">
    <div class="navbar-brand">
        <p>content</p><button class="button navbar-burger"><span></span><span></span><span></span></button><button class="button navbar-burger"><span></span><span></span><span></span></button></div>
    <div class="navbar-menu">
        <div class="navbar-start">
            <p>content</p>
        </div>
    </div>
</div>
`;

exports[`Navbar.vue matches snapshot: {"slots":{"start":"<p>content</p>"}} 1`] = `
<div class="navbar">
    <div class="navbar-brand">
        <p>content</p><button class="button navbar-burger"><span></span><span></span><span></span></button><button class="button navbar-burger"><span></span><span></span><span></span></button></div>
    <div class="navbar-menu">
        <div class="navbar-start">
            <p>content</p>
        </div>
    </div>
</div>
`;

exports[`Navbar.vue matches snapshot: {} 1`] = `
<div class="navbar">
    <div class="navbar-brand">
        <p>content</p><button class="button navbar-burger"><span></span><span></span><span></span></button><button class="button navbar-burger"><span></span><span></span><span></span></button></div>
</div>
`;
